# Medical-Equipment-Store

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Details.MD  Makefile  README.md  manage.py  pyproject.toml  requirements.txt
accounts/: __init__.py  admin.py  apps.py  errors.py  factories.py  filters.py  mixins.py  models.py  models_manager.py  permissions.py  profile_serializers.py  profiles.py  profiles_serializers.py  serializers.py  services.py  signals.py  urls.py  validators.py  views.py
accounts/fixtures/: groups.json  users.json  users_profiles.json
accounts/middleware/: edit_url.py
accounts/migrations/: 0001_initial.py  0002_service_section.py  0003_alter_section_warehouse_alter_service_warehouse.py  0004_remove_warehouseprofile_sections_and_more.py  0005_alter_service_warehouse.py  0006_alter_user_type.py  0007_subscription.py  0008_deliveryworkerprofile_subscription_and_more.py  0009_alter_doctorprofile_subscription.py  0010_alter_doctorprofile_subscription.py  0011_remove_deliveryworkerprofile_subscription_and_more.py  0013_alter_user_managers.py  (+1 more)
core/: manage.py  services.py  utils.py
doctor/: apps.py  mixin.py  models.py  serializers.py  signals.py  urls.py  views.py
home/: settings.py  urls.py
notification/: urls.py
order/: admin.py  apps.py  mixin.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
product/: apps.py  filters.py  mixins.py  models.py  serializers.py  services.py  urls.py  views.py
src/: manage.py
src/MES/: asgi.py  (+2 more)
warehouse/: mixins.py  models.py  serializers.py  urls.py  views.py
(+115 files in other folders)
